snapshot_tests/operations/errors/invalidDefaultValue2.res
/**
 * Should throw with type \"InputObject\"
 */
module Case1 = %graphql(`
  query invalidDefaultValues {
    invalidDefaultValues(
        int: {test: "xxx"}
    )
  }
`)
